[package]
name = "prime_bag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd = "2.3.0"
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "my_benchmark"
harness = false